--- a/TIL2020/TrelloWithVue/vue-trello/package.json
+++ b/TIL2020/TrelloWithVue/vue-trello/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "vue-trello",
+  "name": "lecture-vue-trello",
   "description": "A Vue.js project",
   "version": "1.0.0",
-  "author": "Seolyu ♪ *҉＼( ˆᴗˆ )ﾉ✩ <seolyu.90@gmail.com>",
+  "author": "김정환 <ej88ej@gmail.com>",
   "license": "MIT",
   "private": true,
   "scripts": {
@@ -10,7 +10,8 @@
     "build": "cross-env NODE_ENV=production webpack --progress --hide-modules"
   },
   "dependencies": {
-    "vue": "^2.5.11"
+    "vue": "^2.5.11",
+    "vue-router": "^3.0.1"
   },
   "browserslist": [
     "> 1%",
