--- a/TIL2020/TrelloWithVue/vue-trello/package.json
+++ b/TIL2020/TrelloWithVue/vue-trello/package.json
@@ -12,7 +12,8 @@
   "dependencies": {
     "axios": "^0.19.2",
     "vue": "^2.5.11",
-    "vue-router": "^3.0.1"
+    "vue-router": "^3.0.1",
+    "vuex": "^3.5.1"
   },
   "browserslist": [
     "> 1%",
